# epub2kindle

./: .gitignore  404.html  LICENSE  README.md  _entry.py  epub2kindle.spec  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
ch1-packaging/: index.html
ch2-cli/: index.html
ch3-release/: index.html
ch4-testing/: index.html
ch5-formats/: index.html
ch5-formats/azw3/: index.html
ch5-formats/epub/: index.html
ch5-formats/mobi6/: index.html
docs/: index.md
docs/ch1-packaging/: index.md
docs/ch2-cli/: index.md
docs/ch3-release/: index.md
docs/ch4-testing/: index.md
docs/ch5-formats/: azw3.md  epub.md  index.md  mobi6.md
search/: search_index.json
src/epub2kindle/: __init__.py  _azw3_writer.py  _image_processor.py  _mobi_writer.py  _pipeline.py  cli.py  epub.py  errors.py  kcc_runner.py  options.py  preflight.py
tests/: conftest.py  test_cli.py  test_epub_extract.py  test_options.py  test_runner.py
tests/data/: tiny.epub
