[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epub2kindle"
dynamic = ["version"]
description = "Convert EPUBs to Kindle-optimized MOBIs via Kindle Comic Converter"
readme = "README.md"
license = { text = "ISC" }
requires-python = ">=3.10"
dependencies = [
    "Pillow>=9.3.0",
    "mozjpeg-lossless-optimization>=1.2.0",
    "python-slugify>=1.2.1,<9.0.0",
    "psutil>=5.9.5",
    "natsort>=8.4.0",
    "numpy>=1.22.4",
    "PyMuPDF>=1.16.1",
    "distro>=1.8.0",
    "kindlecomicconverter @ git+https://github.com/ciromattia/kcc.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
epub2kindle = "epub2kindle.cli:main"

[tool.hatch.version]
path = "src/epub2kindle/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/epub2kindle"]
