[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epub2kindle"
dynamic = ["version"]
description = "Convert EPUBs to Kindle AZW3 (KF8) for USB sideloading."
readme = "README.md"
license = { text = "ISC" }
requires-python = ">=3.10"
dependencies = [
    "Pillow>=9.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
epub2kindle = "epub2kindle.cli:main"

[tool.hatch.version]
path = "src/epub2kindle/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/epub2kindle"]
